Added new named for operations
