# controllers/TagsController.js
@@ -8,11 +8,11 @@
 
 const Controller = require('./Controller');
 const service = require('../services/TagsService');
-const tagsGET = async (request, response) => {
-  await Controller.handleRequest(request, response, service.tagsGET);
+
+const findAllTags = async (request, response) => {
+  await Controller.handleRequest(request, response, service.findAllTags);
 };
 
-
 module.exports = {
-  tagsGET,
+  findAllTags,
 };
